// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`depositFinalised > Bitcoin > updates swap request for boosted deposit 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": null,
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-06T00:00:06.000Z,
  "depositFinalisedBlockIndex": "10-7",
  "depositTransactionRef": "0821895c9b0ae1078a9cd1b78a3c35fdf615524691901d323676811343b95f2f",
  "destAddress": "0x41ad2bc63a2059f9b623533d87fe99887d794847",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 57034n,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": 5265n,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "100000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-06T00:00:00.000Z,
  "swapRequestedBlockIndex": "1-1",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`depositFinalised > Bitcoin > updates swap request for regular deposit 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "1000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-06T00:00:06.000Z,
  "depositFinalisedBlockIndex": "10-7",
  "depositTransactionRef": "0821895c9b0ae1078a9cd1b78a3c35fdf615524691901d323676811343b95f2f",
  "destAddress": "0x41ad2bc63a2059f9b623533d87fe99887d794847",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fees": [
    {
      "amount": "4668",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": null,
      "swapRequestId": Any<BigInt>,
      "type": "INGRESS",
    },
  ],
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 57034n,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "100000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-06T00:00:00.000Z,
  "swapRequestedBlockIndex": "1-1",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`depositFinalised > Bitcoin > updates swap request for regular deposit with 190 schema 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": "10000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-06T00:00:06.000Z,
  "depositFinalisedBlockIndex": "10-7",
  "depositTransactionRef": "a609689d549a894c996e25d21bff81f243d64965f87b245ef774ad87196976cc",
  "destAddress": "0x41ad2bc63a2059f9b623533d87fe99887d794847",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fees": [
    {
      "amount": "2500",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": null,
      "swapRequestId": Any<BigInt>,
      "type": "INGRESS",
    },
  ],
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 4,
  "nativeId": 57034n,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "100000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-06T00:00:00.000Z,
  "swapRequestedBlockIndex": "1-1",
  "totalBrokerCommissionBps": 0,
}
`;
